--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PK'
 - !lcsh 'Epic poetry, Sanskrit -- Translations into English'
+- GITenberg
 title: 'Maha-bharata
 
   The Epic of Ancient India Condensed into English Verse'
